--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -53,10 +53,10 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Recognition</h2>
+          <h2>Publication</h2>
         </header>
 
-        {% for recognition in site.data.recognitions %}
+        {% for recognition in site.data.publications %}
         <div class="resume-item">
           <h3 class="resume-item-title" itemprop="award">{{ recognition.award }}</h3>
           <h4 class="resume-item-details">{{ recognition.organization }} &bull; {{ recognition.year }}</h4>
