--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -56,11 +56,11 @@
           <h2>Publication</h2>
         </header>
 
-        {% for recognition in site.data.publications %}
+        {% for publication in site.data.publications %}
         <div class="resume-item">
-          <h3 class="resume-item-title" itemprop="award">{{ recognition.award }}</h3>
-          <h4 class="resume-item-details">{{ recognition.organization }} &bull; {{ recognition.year }}</h4>
-          <p class="resume-item-copy">{{ recognition.summary }}</p>
+          <h3 class="resume-item-title" itemprop="award">{{ publication.award }}</h3>
+          <h4 class="resume-item-details">{{ publication.organization }} &bull; {{ publication.year }}</h4>
+          <p class="resume-item-copy">{{ publication.summary }}</p>
         </div>
         {% endfor %}
 
