--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -58,9 +58,10 @@
 
         {% for publication in site.data.publications %}
         <div class="resume-item">
-          <h3 class="resume-item-title" itemprop="award">{{ publication.award }}</h3>
-          <h4 class="resume-item-details">{{ publication.organization }} &bull; {{ publication.year }}</h4>
-          <p class="resume-item-copy">{{ publication.summary }}</p>
+          <p class="resume-item-title">{{ publication.authors }}</p>
+          <p class="resume-item-title">{{ publication.title }}</p>
+          <p class="resume-item-details">{{ publication.conference }} &bull; {{ publication.year }}</p>
+          <p class="resume-item-copy">{{ publication.comment }}</p>
         </div>
         {% endfor %}
 
