--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -58,8 +58,8 @@
 
         {% for publication in site.data.publications %}
         <div class="resume-item">
-          <p class="resume-item-title">{{ publication.authors }}</p>
-          <p class="resume-item-title">{{ publication.title }}</p>
+          <p class="resume-item-details">{{ publication.authors }}</p>
+          <p class="resume-item-details">{{ publication.title }}</p>
           <p class="resume-item-details">{{ publication.conference }} &bull; {{ publication.year }}</p>
           <p class="resume-item-copy">{{ publication.comment }}</p>
         </div>
