--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -60,7 +60,7 @@
         <div class="resume-item">
           <p class="resume-item-title">{{ publication.title }}</p>
           <p class="resume-item-details">{{ publication.authors }}</p>
-          <p class="resume-item-details">{{ publication.conference }} &bull; {{ publication.year }}</p>
+          <p class="resume-item-details">{{ publication.conference }}; {{ publication.year }}</p>
           <p class="resume-item-copy">{{ publication.comment }}</p>
         </div>
         {% endfor %}
