--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -81,13 +81,7 @@
           <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
           <h4 class="resume-item-details" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
           <p class="resume-item-copy" itemprop="description">Supervisors: {{ education.supervisors }}</p>
-          <p class="resume-item-copy" itemprop="description">
-            <ul class="resume-item-list">
-              {% for award in education.awards %}
-              <li>{{ award.award }}</li>
-              {% endfor %}
-            </ul>
-          <p class="resume-item-copy">{{ education.summary }}</p>
+          <p class="resume-item-copy">Research Area: {{ education.summary }}</p>
         </div>
         {% endfor %}
       </section>
