--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -80,7 +80,7 @@
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
           <h4 class="resume-item-details" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
-          <p class="resume-item-copy" itemprop="description">Supervisors: {{ education.supervisors }}</p>
+          <p class="resume-item-copy">Supervisors: {{ education.supervisors }}</p>
           <p class="resume-item-copy">Research Area: {{ education.summary }}</p>
         </div>
         {% endfor %}
