--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -38,6 +38,10 @@
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
         </div>
+        
+        <div class="executive-summary" itemprop="description">
+          {{ My Email: site.resume_contact_email }}
+        </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
         <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>
