--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -38,9 +38,9 @@
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
         </div>
-        
+
         <div class="executive-summary" itemprop="description">
-          {{ My Email: site.resume_contact_email }}
+          {{ Email Address: site.resume_contact_email }}
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
