--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -58,7 +58,7 @@
 
         {% for publication in site.data.publications %}
         <div class="resume-item">
-          <p class="resume-item-title">{{ publication.title }}</p>
+          <p class="resume-item-title">{{ publication.title publication.link}}</p>
           <p class="resume-item-details">{{ publication.authors }}</p>
           <p class="resume-item-details">{{ publication.conference }} {{ publication.year }}</p>
           <p class="resume-item-copy">{{ publication.comment }}</p>
