--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -137,7 +137,7 @@
         <div class="resume-item">
           <ul class="resume-item-list">
             {% for award in site.data.awards %}
-            <li>{{ award.description }}</li>
+            <h4>{{ award.description }}</h4>
             {% endfor %}
           </ul>
         </div>
