--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -136,7 +136,7 @@
         
         {% for award in site.data.awards %}
         <div class="resume-item">
-          <h4>{{ award.description }}</h4>
+          <b>{{ award.description }}</b>
         </div>
         {% endfor %}
       </section>
