--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -136,7 +136,7 @@
         
         <div class="resume-item">
           {% for award in site.data.awards %}
-          <b class="resume-item-copy">{{ award.description }}</b>
+          <p class="resume-item-copy">{{ award.description }}</p>
           {% endfor %}
         </div>
         
