--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -40,10 +40,7 @@
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>
-        {% elsif site.resume_looking_for_work == 'no' %}
-        <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
-        {% else %}
+        <a href="mailto:{{ site.resume_contact_email }}" class="executive-summary" itemprop="email">Email</a>
         {% endif %}
 
       </header>
