--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -40,7 +40,7 @@
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="executive-summary" itemprop="email">Email</a>
+        Email: <a href="mailto:{{ site.resume_contact_email }}" class="executive-summary" itemprop="email">jinkai2525@gmail.com</a>
         {% endif %}
 
       </header>
